crates/seele-composer/src/tests/snapshots/seele_composer__resolve__tests__resolve_submission@submission_nested_sequence_2.yaml.snap
---
source: crates/seele-composer/src/resolve.rs
expression: submission
input_file: crates/seele-composer/src/tests/submission_nested_sequence_2.yaml
---
Submission(
  id: "nested_sequence_2",
  root_directory: "test",
  config: SubmissionConfig(
    id: "nested_sequence_2",
    steps: {
      "one": {
        "status": "PENDING",
        "embeds": {},
      },
      "two": {
        "status": "PENDING",
        "embeds": {},
        "steps": {
          "two-one": {
            "status": "PENDING",
            "embeds": {},
          },
          "two-two": {
            "status": "PENDING",
            "embeds": {},
          },
        },
      },
      "three": {
        "status": "PENDING",
        "embeds": {},
      },
      "four": {
        "status": "PENDING",
        "embeds": {},
        "steps": {
          "four-one": {
            "status": "PENDING",
            "embeds": {},
          },
          "four-two": {
            "status": "PENDING",
            "embeds": {},
            "parallel": [
              {
                "status": "PENDING",
                "embeds": {},
              },
              {
                "status": "PENDING",
                "embeds": {},
              },
              {
                "status": "PENDING",
                "embeds": {},
              },
            ],
          },
          "four-three": {
            "status": "PENDING",
            "embeds": {},
            "steps": {
              "four-three-one": {
                "status": "PENDING",
                "embeds": {},
              },
            },
          },
        },
      },
    },
  ),
  root_node: RootTaskNode(
    tasks: [
      TaskNode(
        name: ".one",
        children: [
          TaskNode(
            name: ".two",
            children: [
              TaskNode(
                name: ".three",
                children: [
                  TaskNode(
                    name: ".four",
                    children: [],
                    ext: [
                      TaskNode(
                        name: ".four.four-one",
                        children: [
                          TaskNode(
                            name: ".four.four-two",
                            children: [
                              TaskNode(
                                name: ".four.four-three",
                                children: [],
                                ext: [
                                  TaskNode(
                                    name: ".four.four-three.four-three-one",
                                    children: [],
                                    ext: Config(
                                      action: "seele/noop@1",
                                      test: 431,
                                    ),
                                  ),
                                ],
                              ),
                            ],
                            ext: [
                              TaskNode(
                                name: ".four.four-two.0",
                                children: [],
                                ext: Config(
                                  action: "seele/noop@1",
                                  test: 421,
                                ),
                              ),
                              TaskNode(
                                name: ".four.four-two.1",
                                children: [],
                                ext: Config(
                                  action: "seele/noop@1",
                                  test: 422,
                                ),
                              ),
                              TaskNode(
                                name: ".four.four-two.2",
                                children: [],
                                ext: Config(
                                  action: "seele/noop@1",
                                  test: 423,
                                ),
                              ),
                            ],
                          ),
                        ],
                        ext: Config(
                          action: "seele/noop@1",
                          test: 41,
                        ),
                      ),
                    ],
                  ),
                ],
                ext: Config(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: [
              TaskNode(
                name: ".two.two-one",
                children: [
                  TaskNode(
                    name: ".two.two-two",
                    children: [],
                    ext: Config(
                      action: "seele/noop@1",
                      test: 22,
                    ),
                  ),
                ],
                ext: Config(
                  action: "seele/noop@1",
                  test: 21,
                ),
              ),
            ],
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
